# task_manager

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: task_manager-config.cmake.in
examples/: CMakeLists.txt  list_current_process.cpp  list_modules.cpp  open_by_name.cpp  scoped_freeze.cpp  scoped_suspend.cpp
include/task_manager/: error.hpp  types.hpp
include/task_manager/detail/: nt_api.hpp  nt_types.hpp  unique_handle.hpp
include/task_manager/process/: modules.hpp  process.hpp
src/: error.cpp
src/detail/: nt_api.cpp  unique_handle.cpp
src/process/: modules.cpp  process.cpp
tests/: CMakeLists.txt  README.md
tests/unit/: test_error.cpp  test_types.cpp
